# cli_wrapper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: checks.yaml  pypi.yaml
doc/: callable_serialization.md  parsers.md  pre_packaged.md  transformers.md  validators.md
docs/: cli_wrapper.html  index.html  search.js
docs/cli_wrapper/: cli_wrapper.html  parsers.html  pre_packaged.html  transformers.html  util.html  validators.html
src/cli_wrapper/: __init__.py  cli_wrapper.py  parsers.py  transformers.py  validators.py
src/cli_wrapper/pre_packaged/: README.md  __init__.py
src/cli_wrapper/pre_packaged/beta/: cilium.json  cilium.py  docker.json  helm.json  kubectl.json  kubectl.py  terraform.json
src/cli_wrapper/util/: __init__.py  callable_chain.py  callable_registry.py
src/help_parser/: __main__.py
tests/: test_cli_wrapper.py  test_parsers.py  test_serialization.py  test_validators.py
tests/data/: fake_kubectl
tests/pre_packaged/: test_cilium.py  test_kubectl.py
